error.txt
    Checking siren v0.4.0 (C:\Users\pixel\Downloads\twister)
error: Cannot find requested import "ui/main.slint" in the include search path
 --> src\main.rs:8:31
  |
8 |     import { AppWindow } from "ui/main.slint";
  |                               ^^^^^^^^^^^^^^^

warning: unused import: `std::sync::Arc`
  --> src\mamba.rs:17:5
   |
17 | use std::sync::Arc;
   |     ^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `MambaOutput`
 --> src\training.rs:8:38
  |
8 | use crate::mamba::{MambaAutoencoder, MambaOutput, TrainingMetrics, TrainingPair};
  |                                      ^^^^^^^^^^^

error[E0308]: mismatched types
    --> src\mamba.rs:219:42
     |
 219 |                     let a_dn = a_neg.get((d, j))?.to_scalar::<f32>()?;
     |                                      --- ^^^^^^ expected `usize`, found `(usize, usize)`
     |                                      |
     |                                      arguments to this method are incorrect
     |
     = note: expected type `usize`
               found tuple `(usize, usize)`
note: method defined here
    --> C:\Users\pixel\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\candle-core-0.9.2\src\tensor.rs:2213:12
     |
2213 |     pub fn get(&self, i: usize) -> Result<Tensor> {
     |            ^^^

error[E0277]: the trait bound `AdamW: std::clone::Clone` is not satisfied
   --> src\mamba.rs:250:5
    |
243 | #[derive(Clone)]
    |          ----- in this derive macro expansion
...
250 |     optimizer: Option<candle_nn::AdamW>,
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `std::clone::Clone` is not implemented for `AdamW`
    |
    = note: required for `std::option::Option<AdamW>` to implement `std::clone::Clone`

error[E0277]: the `?` operator can only be applied to values that implement `Try`
   --> src\mamba.rs:312:19
    |
312 |         let mse = ((&diff * &diff)?.mean_all()?)?.to_scalar::<f32>()?;
    |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the `?` operator cannot be applied to type `candle_core::Tensor`
    |
    = help: the nightly-only, unstable trait `Try` is not implemented for `candle_core::Tensor`

error[E0308]: mismatched types
   --> src\main.rs:85:38
    |
 85 |     let vbuffer = new_shared_vbuffer(gpu_shared.clone()).context("V-buffer init")?;
    |                   ------------------ ^^^^^^^^^^^^^^^^^^ expected `&Device`, found `Arc<GpuShared>`
    |                   |
    |                   arguments to this function are incorrect
    |
    = note: expected reference `&wgpu::Device`
                  found struct `Arc<GpuShared>`
note: function defined here
   --> src\vbuffer.rs:129:8
    |
129 | pub fn new_shared_vbuffer(device: &wgpu::Device) -> SharedVBuffer {
    |        ^^^^^^^^^^^^^^^^^^ ---------------------

error[E0599]: no method named `context` found for struct `Arc<parking_lot::lock_api::Mutex<parking_lot::RawMutex, GpuVBuffer>>` in the current scope
  --> src\main.rs:85:58
   |
85 |     let vbuffer = new_shared_vbuffer(gpu_shared.clone()).context("V-buffer init")?;
   |                                                          ^^^^^^^ method not found in `Arc<parking_lot::lock_api::Mutex<parking_lot::RawMutex, GpuVBuffer>>`

error[E0061]: this function takes 3 arguments but 2 arguments were supplied
   --> src\main.rs:93:21
    |
 93 |     let mut audio = AudioEngine::new(merge_tx, tdoa_tx).context("Audio engine init")?;
    |                     ^^^^^^^^^^^^^^^^ -------- argument #1 of type `Arc<AppState>` is missing
    |
note: associated function defined here
   --> src\audio.rs:160:12
    |
160 |     pub fn new(
    |            ^^^
161 |         state: Arc<AppState>,
    |         --------------------
help: provide the argument
    |
 93 |     let mut audio = AudioEngine::new(/* Arc<AppState> */, merge_tx, tdoa_tx).context("Audio engine init")?;
    |                                      ++++++++++++++++++++

error[E0599]: no method named `input_device_count` found for struct `AudioEngine` in the current scope
   --> src\main.rs:94:30
    |
 94 |     let device_count = audio.input_device_count();
    |                              ^^^^^^^^^^^^^^^^^^ method not found in `AudioEngine`
    |
   ::: src\audio.rs:148:1
    |
148 | pub struct AudioEngine {
    | ---------------------- method `input_device_count` not found for this struct

error[E0599]: no method named `sample_rate` found for struct `AudioEngine` in the current scope
   --> src\main.rs:95:29
    |
 95 |     let sample_rate = audio.sample_rate();
    |                             ^^^^^^^^^^^-- help: remove the arguments
    |                             |
    |                             field, not a method
    |
   ::: src\audio.rs:148:1
    |
148 | pub struct AudioEngine {
    | ---------------------- method `sample_rate` not found for this struct

error[E0061]: this function takes 3 arguments but 2 arguments were supplied
   --> src\main.rs:98:9
    |
 98 |         GpuContext::new(gpu_shared.clone(), sample_rate as u32).context("GPU synthesis init")?;
    |         ^^^^^^^^^^^^^^^---------------------------------------- argument #3 of type `u32` is missing
    |
note: associated function defined here
   --> src\gpu.rs:243:12
    |
243 |     pub fn new(shared: Arc<GpuShared>, sample_rate: f32, n_channels: u32) -> anyhow::Result<Self> {
    |            ^^^                                           ---------------
help: provide the argument
    |
 98 |         GpuContext::new(gpu_shared.clone(), sample_rate as u32, /* u32 */).context("GPU synthesis init")?;
    |                                                               +++++++++++

error[E0599]: no method named `collect_pair` found for struct `std::sync::MutexGuard<'_, TrainingSession>` in the current scope
   --> src\main.rs:381:41
    |
381 | ...                   session.collect_pair(&[], &mags);
    |                               ^^^^^^^^^^^^ method not found in `std::sync::MutexGuard<'_, TrainingSession>`

warning: unused variable: `t`
   --> src\mamba.rs:115:14
    |
115 |         let (t, _f) = x.dims2()?;
    |              ^ help: if this is intentional, prefix it with an underscore: `_t`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

Some errors have detailed explanations: E0061, E0277, E0308, E0599.
For more information about an error, try `rustc --explain E0061`.
warning: `siren` (bin "siren") generated 3 warnings
error: could not compile `siren` (bin "siren") due to 11 previous errors; 3 warnings emitted
